# ps2iconsys

./: .gitignore  CMakeLists.txt  Makefile  default.tga  default.usda  icon.sys  referenceMaterial.txt
Test Saves & Tools/: psv-converter-macos  test.psv
Test Saves & Tools/Test Save/: BASLUS-20811NFSU  PETE.nfs  icon.sys
include/: obj_loader.hpp
src/: obj_loader.cpp  obj_loader.impl.hpp  ps2icon_to_obj.cpp
